# iLuma

./: .gitignore  .gitmodules  .gitmodules.disabled  CMakeLists.txt  CopyShaders.cmake  README.md  build.bat  build.gradle  gradle.properties  local.properties  settings.gradle  start.bat  startvs.bat
.github/workflows/: build-ios.yml  build-macos-release.yml  build-macos.yml
app/: build.gradle  key.keystore  local.properties
app/src/: main.cpp  renderer_vk.cpp
app/src/headers/: renderer_vk.hpp
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app.cpp  main.cpp
app/src/main/cpp/headers/: app.hpp
app/src/main/cpp/shaders/: bgfx_shader.sh  common.sh  fs_triangle.sc  shaderlib.sh  varying.def.sc  vs_shader.sc
app/src/main/cpp/web/: base.html
app/src/main/java/com/example/iluma/: MainActivity.java
app/src/shaders/: basic.vert
builds/windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MyForgeApp.sln  MyForgeApp.vcxproj  MyForgeApp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
builds/windows/MyForgeApp.dir/Debug/MyForgeApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
builds/windows/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
builds/windows/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
docs/: 01_getting_started  01_getting_started.md
scripts/: build-all.bat  build-android.bat  build-ios.bat  build-linux.bat  build-macos.bat  build-pico.bat  build-quest.bat  build-steamvr-linux.bat  build-steamvr-windows.bat  build-steamvr.bat  build-web.bat  build-windows.bat
src/: main.cpp
src/main/cpp/: CMakeCache.txt  CMakeLists.txt  main.cpp
